--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 BASE_URL = 'https://cdn.contentful.com'
 SPACES = 'c2nm4chjg0dv'
 ACCESS_TOKEN = 'ZgGVEqJmZyBtTprEMy2KaNELysP54uyLqPINcyNRTb8'
+Aboutus_Token = 'BhSLp_KaL-aoQYQQ0rTZwDj2H_aQ_hf9tBrWjSMk3f0'
