--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ BASE_URL = 'https://cdn.contentful.com'
 SPACES = 'c2nm4chjg0dv'
 ACCESS_TOKEN = 'ZgGVEqJmZyBtTprEMy2KaNELysP54uyLqPINcyNRTb8'
 Aboutus_Token = 'BhSLp_KaL-aoQYQQ0rTZwDj2H_aQ_hf9tBrWjSMk3f0'
+TermsOfUse = '2Ww3LsKKBBxMaRevqanwLpLmtlhS1goDca4tT-UYcRI'
+PrivacyPolicy = 'qdIFAH94hTPbWS2VzwihNbpeBJTVw6LwUrPtr1cjxR4'
